added gif logic

--- a/CITS5501/prject1/aboutMe.html
+++ b/CITS5501/prject1/aboutMe.html
@@ -10,6 +10,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+<body class="bg-black text-white">
+
 <header>
     <nav class="navbar bg-black navbar-expand-lg navbar-dark">
         <div class="container-fluid">
@@ -26,7 +28,6 @@
 
 </header>
 
-<body class="bg-black text-white">
     <div class="container my-5" id="about-section">
         <h1 class="display-1" style="font-weight: 400;">About</h1>
         <img id="profile-pic" src="resource/images/roundProfilePic.png" alt="My Image" class="img-fluid"
@@ -34,7 +35,7 @@
         <div class="container my-4" id="about-me-content">
             <p>
                 Hello! I'm a passionate software engineer with a strong interest in DevOps and cloud technologies. I
-                have a solid foundation in programming languages such as Python, Java, and C++and I'm always
+                have a solid foundation in programming languages such as Python, Java, and C++ and I'm always
                 eager to learn new skills and technologies.
             </p>
             <p>
@@ -44,17 +45,17 @@
                 Previously, I was a DevOps engineer at <a href="https://www.businessonbot.com">BusinessOnBot</a> and an Automation engineer at <a href="https://lgads.tv/">LG Ads Solutions</a>.
             </p>
             <h2 class="mt-8 mb-4 text-2xl font-semibold dark:text-white">Skills</h2>
-            <img src="resource/images/java.svg" alt="Java" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/python.svg" alt="Python" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/cpp.svg" alt="CPP" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/bash.svg" alt="Bash" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/aws.svg" alt="AWS" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/azure.svg" alt="Azure" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/kubernetes.svg" alt="Kubernetes" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/docker.svg" alt="Docker" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/jenkins.svg" alt="Jenkins" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/git.svg" alt="Git" class="skill-icon" style="height: 50px; width: 50px;">
-            <img src="resource/images/terraform.svg" alt="Terraform" class="skill-icon" style="height: 50px; width: 50px;">
+            <img src="resource/images/java.svg" alt="Java" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Java">
+            <img src="resource/images/python.svg" alt="Python" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Python">
+            <img src="resource/images/cpp.svg" alt="CPP" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="C++">
+            <img src="resource/images/bash.svg" alt="Bash" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Bash">
+            <img src="resource/images/aws.svg" alt="AWS" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="AWS">
+            <img src="resource/images/azure.svg" alt="Azure" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Azure">
+            <img src="resource/images/kubernetes.svg" alt="Kubernetes" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Kubernetes">
+            <img src="resource/images/docker.svg" alt="Docker" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Docker">
+            <img src="resource/images/jenkins.svg" alt="Jenkins" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Jenkins">
+            <img src="resource/images/git.svg" alt="Git" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Git">
+            <img src="resource/images/terraform.svg" alt="Terraform" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Terraform">
         </div>
     </div>
 </body>
