--- a/CITS5501/prject1/aboutMe.html
+++ b/CITS5501/prject1/aboutMe.html
@@ -10,8 +10,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-<body class="bg-black text-white">
-
+<body class=" bg-dark text-white">
 <header>
     <nav class="navbar bg-black navbar-expand-lg navbar-dark">
         <div class="container-fluid">
@@ -29,6 +28,7 @@
 </header>
 
     <div class="container my-5" id="about-section">
+		<section>
         <h1 class="display-1" style="font-weight: 400;">About</h1>
         <img id="profile-pic" src="resource/images/roundProfilePic.png" alt="My Image" class="img-fluid"
             style="height: 250px; width:230px; ">
@@ -45,18 +45,47 @@
                 Previously, I was a DevOps engineer at <a href="https://www.businessonbot.com">BusinessOnBot</a> and an Automation engineer at <a href="https://lgads.tv/">LG Ads Solutions</a>.
             </p>
             <h2 class="mt-8 mb-4 text-2xl font-semibold dark:text-white">Skills</h2>
-            <img src="resource/images/java.svg" alt="Java" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Java">
-            <img src="resource/images/python.svg" alt="Python" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Python">
-            <img src="resource/images/cpp.svg" alt="CPP" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="C++">
-            <img src="resource/images/bash.svg" alt="Bash" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Bash">
-            <img src="resource/images/aws.svg" alt="AWS" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="AWS">
-            <img src="resource/images/azure.svg" alt="Azure" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Azure">
-            <img src="resource/images/kubernetes.svg" alt="Kubernetes" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Kubernetes">
-            <img src="resource/images/docker.svg" alt="Docker" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Docker">
-            <img src="resource/images/jenkins.svg" alt="Jenkins" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Jenkins">
-            <img src="resource/images/git.svg" alt="Git" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Git">
-            <img src="resource/images/terraform.svg" alt="Terraform" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Terraform">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original-wordmark.svg" alt="Java" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Java">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg" alt="Python" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Python">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" alt="CPP" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="C++">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bash/bash-original.svg" alt="Bash" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Bash">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg" alt="AWS" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="AWS">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/azure/azure-original.svg" alt="Azure" class="skill-icon" style="height: 45px; width: 45px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Azure">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kubernetes/kubernetes-original-wordmark.svg" alt="Kubernetes" class="skill-icon" style="height: 60px; width: 60px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Kubernetes">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original-wordmark.svg" alt="Docker" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Docker">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jenkins/jenkins-original.svg" alt="Jenkins" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Jenkins">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-plain-wordmark.svg" alt="Git" class="skill-icon" style="height: 60px; width: 60px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Git">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/terraform/terraform-original-wordmark.svg" alt="Terraform" class="skill-icon" style="height: 50px; width: 50px;" data-bs-toggle="tooltip" data-bs-placement="top" title="Terraform">
         </div>
+		</section>
+		<div class="timeline">
+			<div class= "container-timeline" id="left-container">
+				<img src = "resource/images/BoB.jpg">
+				<div class= "timeline-text-box">
+					<h2>DevOps Engineer</h2>
+					<small>Sept 2023 - Feb 2024</small>
+					<p>Description of the project or experience related to ABCD.</p>
+				</div>
+			</div>
+			<div class= "container-timeline" id="right-container">
+				<img src="resource/images/lgAds.jpg">
+				<div class= "timeline-text-box">
+					<h2>Automation Engineer</h2>
+					<small>Feb 2020 - Aug 2023</small>
+					<p>Description of the project or experience related to ABCD.</p>
+				</div>
+			</div>
+			<div class= "container-timeline" id="left-container">
+				<img src="resource/images/treebo.jpg">
+				<div class= "timeline-text-box">
+					<h2>Intern</h2>
+					<small>Nov 2019 - Jan 2020</small>
+					<p>Description of the project or experience related to ABCD.</p>
+				</div>
+			</div>
+			
+		</div>
+		<section>
     </div>
 </body>
 
