--- a/CITS5501/prject1/index.html
+++ b/CITS5501/prject1/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>24245807</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -14,7 +13,7 @@
 
 <body class="bg-black text-white">
     <header>
-        <nav class="navbar bg-black navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <div class="navbar-brand text-white">Best Practices</div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -25,8 +24,8 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#HTML">HTML</a>
-                        <a class="nav-link" href="#CSS">CSS</a>
-                        <a class="nav-link" href="#JavaScript">JavaScript</a>
+                        <a class="nav-link active" href="#CSS">CSS</a>
+                        <a class="nav-link active" href="#JavaScript">JavaScript</a>
                     </div>
                 </div>
                 <div class="navbar-nav ms-auto">
@@ -45,7 +44,7 @@
                 <div class="card bg-dark text-white border-light p-4">
                     <section id="HTML" class="hidden">
                         <div class="header-container">
-                            <img src="resource/images/html.svg" alt="HTML" class="header-icon"
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" alt="HTML" class="header-icon"
                                 style="height: 60px; width: 60px" />
                             <h1>HTML Best Practices</h1>
                         </div>
@@ -141,7 +140,7 @@
                 <div class="card bg-dark text-white border-light p-4">
                     <section id="CSS" class="hidden">
                         <div class="header-container">
-                            <img src="resource/images/css.svg" alt="CSS" class="header-icon"
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" alt="CSS" class="header-icon"
                                 style="height: 60px; width: 60px" />
                             <h1>CSS Best Practices</h1>
                         </div>
@@ -209,7 +208,7 @@
                 <div class="card bg-dark text-white border-light p-4">
                     <section id="JavaScript" class="hidden">
                         <div class="header-container">
-                            <img src="resource/images/javascript.svg" alt="JavaScript" class="header-icon"
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript" class="header-icon"
                                 style="height: 60px; width: 60px" />
                             <h1>JavaScript Best Practices</h1>
                         </div>
